# bookstore

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: heroku-deploy.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: __init__.py  factories.py
product/migrations/: 0001_initial.py  0002_alter_product_description.py
product/models/: product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
