[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Claudio Ferreira Junior <claudioferreirajr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
django = "^5.0.3"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
factory-boy = "^3.3.0"
whitenoise = "^6.6.0"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
